Data-page attribute
Changes:
- Now you'll have to use a data-page attribute on a html element in
order to link it to a page
- On the JS, only the name of the page (data-page) is needed to
subscribe it now

--- a/web/server/package.json
+++ b/web/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web-server",
+  "name": "eiger-web-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "This server hosts the entire web client application for Eiger",
   "main": "main.js",
   "scripts": {
     "start": "node main.js"
@@ -9,6 +9,6 @@
   "author": "Guilherme Reginaldo Ruella",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "4.14.0"
   }
 }
