--- a/rest/package.json
+++ b/rest/package.json
@@ -7,5 +7,12 @@
     "start": "node main.js"
   },
   "author": "Guilherme Reginaldo Ruella",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "1.15.2",
+    "express": "4.14.0",
+    "morgan": "1.7.0",
+    "mysql": "2.11.1",
+    "node-uuid": "1.4.7"
+  }
 }
