--- a/rest/package.json
+++ b/rest/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.15.2",
-    "electron-prebuilt": "1.4.0",
+    "electron": "1.4.3",
     "express": "4.14.0",
     "mkdirp": "0.5.1",
     "morgan": "1.7.0",
