--- a/rest/package.json
+++ b/rest/package.json
@@ -15,6 +15,7 @@
     "mkdirp": "0.5.1",
     "morgan": "1.7.0",
     "mysql": "2.11.1",
-    "node-uuid": "1.4.7"
+    "node-uuid": "1.4.7",
+    "nodemailer": "^2.6.4"
   }
 }
